--- a/index.html
+++ b/index.html
@@ -5,198 +5,208 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ПрасолА</title>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-            <img alt="Голова"
-                 src="https://github.com/ArtyomPrasol/ArtyomPrasol.github.io/blob/main/link.png?raw=true" />
-            <br />
-            <p><em>Pash_Test</em></p>
+    <header class="container-fluid">
+        <div class="d-flex ml-md-auto">
+        <img alt="Голова"
+             src="https://github.com/ArtyomPrasol/ArtyomPrasol.github.io/blob/main/link.png?raw=true" />
+        <br />
+        <p><em>Pash_Test</em></p>
+        </div>
     </header>
     <br />
-   
-    <div id="maintest">
-    <nav class="left">
-        <h1>
-            <a style="font-size:30px">Меню</a>
-        </h1>
-        <h2 id="menu">
-            <a href="#p1">Гиперссылки</a>
-            <a href="#p2">Таблица</a>
-            <a href="#p3">Форма</a>
-        </h2>
-    </nav>
-    <br />
-    <!--Гиперссылки-->
-    <div id="p1">
-        <h2>Гиперссылки</h2>
-        <ol>
-            <li><a href="http://example.com"> Первый</a></li>
-            <li><a href="https://example.com"> Второй</a></li>
-            <li><a href="ftp://tavalik.ru/Temp/file.txt"> Третье</a></li>
-            <li><a href="ftp://user:123password@tavalik.ru/Temp/file.txt"> Четвертое</a></li>
-            <li><a href="http://example.com/page#about">Пятое</a></li>
-            <li><a href="#about">О компании</a></li>
-            <li><a href="http://example.com/?value=parametr&size=l"> Седьмой</a></li>
-            <li>
 
-                <br />
-                <a href="https://www.deviantart.com/join/" title="Опубликуйте арт">
-                    Опубликовать арт
-                </a>
-                <br />
-                <a href="https://www.deviantart.com/popular/deviations" title="Популярное">
-                    Поиск иллюстраций среди популярных
-                </a>
-                <br />
-                <a href="https://www.deviantart.com/topic" title="Поиск по темам">
-                    Темы иллюстраций
-                </a>
+    <div id="maintest" class="container">
+        <nav>
+            <h1>
+                <a style="font-size:30px">Меню</a>
+            </h1>
+            <h2 id="menu">
+                <div class="row">
+                    <a href="#p1" class="col-md">Гиперссылки</a>
+                    <a href="#p2" class="col-md">Таблица</a>
+                    <a href="#p3" class="col-md">Форма</a>
+                </div>
+            </h2>
+        </nav>
+        <br />
+        <!--Гиперссылки-->
+        <div id="content" class="row d-flex">
+        <div id="p1" class="order-1 col-md mx-md-3">
+            <h2>Гиперссылки</h2>
+            <ol>
+                <li><a href="http://example.com"> Первый</a></li>
+                <li><a href="https://example.com"> Второй</a></li>
+                <li><a href="ftp://tavalik.ru/Temp/file.txt"> Третье</a></li>
+                <li><a href="ftp://user:123password@tavalik.ru/Temp/file.txt"> Четвертое</a></li>
+                <li><a href="http://example.com/page#about">Пятое</a></li>
+                <li><a href="#about">О компании</a></li>
+                <li><a href="http://example.com/?value=parametr&size=l"> Седьмой</a></li>
+                <li>
 
-            </li>
-            <li><a>Без href</a> </li>
-            <li><a href="">Ссылка с пустым href</a></li>
-            <li><a href="index.html" rel="nofollow">Не перейти</a></li>
-            <li><noindex--><a href="https://example.com">Двенадцатое</a></noindex--></li>
-            <li><p>Текст с <em>выделенным</em> словом</p></li>
-            <li><img src="https://github.com/ArtyomPrasol/ArtyomPrasol.github.io/blob/ea63fca0df52e1734bd67e75ea7b823e25539e90/image.jpg?raw=true" alt="Ссылка на картинку" width="250" height="250" /></li>
-            <li>
-                <img src="https://github.com/ArtyomPrasol/ArtyomPrasol.github.io/blob/main/images.png?raw=true" usemap="#figuri" alt="Фигуры">
-                <map name="figuri">
-                    <area shape="rect" coords="15,15,55,55" href="red.html" alt="красный" />
-                    <area shape="circle" coords="100,75,50" href="green.html" alt="зеленый" />
-                </map>
-            </li>
-            <li><a href="about">Шестнадцать</a></li>
-            <li><a href="12">Семьнадцать</a></li>
-            <li><a href="../about">Восемьнадцать </a></li>
-            <li><a href="../../about">Девятнадцать</a></li>
-            <li><a href=”/about”>Двадцвать</a></li>
-            <li><a href=”/news/12”>Двадцвать один</a></li>
-        </ol>
-    </div>
+                    <br />
+                    <a href="https://www.deviantart.com/join/" title="Опубликуйте арт">
+                        Опубликовать арт
+                    </a>
+                    <br />
+                    <a href="https://www.deviantart.com/popular/deviations" title="Популярное">
+                        Поиск иллюстраций среди популярных
+                    </a>
+                    <br />
+                    <a href="https://www.deviantart.com/topic" title="Поиск по темам">
+                        Темы иллюстраций
+                    </a>
 
-    <br />
-    <!--Таблица-->
-    <div id="p2">
-        <h2>Таблица</h2>
-        <table>
-            <tr class="gr">
-                <th>Колонка1</th>
-                <th>Колонка2</th>
-                <th>Колонка3</th>
-            </tr>
-            <tr class="yl">
-                <td>Ячейка 11</td>
-                <td>Ячейка 12</td>
-                <td>Ячейка 13</td>
-            </tr>
-            <tr class="gr">
-                <td>Ячейка 21</td>
-                <td>Ячейка 22</td>
-                <td>Ячейка 23</td>
-            </tr>
-            <tr class="yl">
-                <td colspan="2">Ячейка 31 с 32 </td>
-                <td>Ячейка 33</td>
-            </tr>
-            <tr class="gr">
-                <td colspan="3">Ячейка 41,42,43</td>
-            </tr>
-            <tr class="yl">
-                <td>Ячейка 51</td>
-                <td>Ячейка 52</td>
-                <td>Ячейка 53</td>
-            </tr>
-        </table>
-    </div>
+                </li>
+                <li><a>Без href</a> </li>
+                <li><a href="">Ссылка с пустым href</a></li>
+                <li><a href="index.html" rel="nofollow">Не перейти</a></li>
+                <li><noindex--><a href="https://example.com">Двенадцатое</a></noindex--></li>
+                <li><p>Текст с <em>выделенным</em> словом</p></li>
+                <li><img src="https://github.com/ArtyomPrasol/ArtyomPrasol.github.io/blob/ea63fca0df52e1734bd67e75ea7b823e25539e90/image.jpg?raw=true" alt="Ссылка на картинку" width="250" height="250" /></li>
+                <li>
+                    <img src="https://github.com/ArtyomPrasol/ArtyomPrasol.github.io/blob/main/images.png?raw=true" usemap="#figuri" alt="Фигуры">
+                    <map name="figuri">
+                        <area shape="rect" coords="15,15,55,55" href="red.html" alt="красный" />
+                        <area shape="circle" coords="100,75,50" href="green.html" alt="зеленый" />
+                    </map>
+                </li>
+                <li><a href="about">Шестнадцать</a></li>
+                <li><a href="12">Семьнадцать</a></li>
+                <li><a href="../about">Восемьнадцать </a></li>
+                <li><a href="../../about">Девятнадцать</a></li>
+                <li><a href=”/about”>Двадцвать</a></li>
+                <li><a href=”/news/12”>Двадцвать один</a></li>
+            </ol>
+        </div>
 
-    <br />
-    <!--Форма-->
-    <div id="p3">
-        <h2>Форма</h2>
-        <form action="/" method="POST">
-            <label>
-                Имя
+        <br />
+        <!--Таблица-->
+        <div id="p2" class="order-3 order-md-2 col-md mx-md-3">
+            <h2>Таблица</h2>
+            <div class="cen">
+                <table>
+                    <tr class="gr">
+                        <th>Колонка1</th>
+                        <th>Колонка2</th>
+                        <th>Колонка3</th>
+                    </tr>
+                    <tr class="yl">
+                        <td>Ячейка 11</td>
+                        <td>Ячейка 12</td>
+                        <td>Ячейка 13</td>
+                    </tr>
+                    <tr class="gr">
+                        <td>Ячейка 21</td>
+                        <td>Ячейка 22</td>
+                        <td>Ячейка 23</td>
+                    </tr>
+                    <tr class="yl">
+                        <td colspan="2">Ячейка 31 с 32 </td>
+                        <td>Ячейка 33</td>
+                    </tr>
+                    <tr class="gr">
+                        <td colspan="3">Ячейка 41,42,43</td>
+                    </tr>
+                    <tr class="yl">
+                        <td>Ячейка 51</td>
+                        <td>Ячейка 52</td>
+                        <td>Ячейка 53</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+        <br />
+        <!--Форма-->
+        <div id="p3" class="order-2 order-md-3 col-md mx-md-3">
+            <h2>Форма</h2>
+            <form action="/" method="POST">
+                <label>
+                    Имя
+                    <br>
+                    <input name="Имя" value="Введите имя" />
+                </label>
                 <br>
-                <input name="Имя" value="Введите имя" />
-            </label>
-            <br>
-            <label>
-                E-mail
+                <label>
+                    E-mail
+                    <br>
+                    <input name="Почта" type="email" placeholder="Введите почту">
+                </label>
                 <br>
-                <input name="Почта" type="email" placeholder="Введите почту">
-            </label>
-            <br>
-            <label>
-                Дата
+                <label>
+                    Дата
+                    <br>
+                    <input name="Дата" type="date" value="2022-09-08">
+                </label>
                 <br>
-                <input name="Дата" type="date" value="2022-09-08">
-            </label>
-            <br>
-            Пол
-            <br />
-            <label>
-                <input type="radio" name="radio1" checked="checked" value="Мужской" />
-                Мужской
-            </label>
-            <label>
-                <input type="radio" name="radio1" value="Женский" />
-                Женский
-            </label>
-            <br />
-            Сколько конечностей?
-            <label>
-                <input type="radio" name="radio2" checked="checked" value="4" />
-                4
-            </label>
-            <label>
-                <input type="radio" name="radio2" value="3" />
-                3
-            </label>
-            <label>
-                <input type="radio" name="radio2" value="2" />
-                2
-            </label>
-            <label>
-                <input type="radio" name="radio2" value="1" />
-                1
-            </label>
-            <label>
-                <input type="radio" name="radio2" value="0" />
-                0
-            </label>
-            <br />
-            Сверхспособности?
-            <br />
-            <select name="name-super-3[]" multiple="multiple">
-                <option value="Бессмертие" selected="selected">Бессмертие</option>
-                <option value="прохождение сквозь стены">прохождение сквозь стены</option>
-                <option value="левитация">левитация</option>
-            </select>
-            <br />
-            Биография?
-            <label>
+                Пол
                 <br />
-                <textarea name="field-name-2">Биография</textarea>
-            </label>
-            <br />
-            <label>
-                <input type="checkbox" checked="checked" name="check1" /> С контактом ознакомлен(а)
-            </label>
-            <br />
-            Отправка формы
-            <input type="submit" value="Отправить" />
-        </form>
+                <label>
+                    <input type="radio" name="radio1" checked="checked" value="Мужской" />
+                    Мужской
+                </label>
+                <label>
+                    <input type="radio" name="radio1" value="Женский" />
+                    Женский
+                </label>
+                <br />
+                Сколько конечностей?
+                <label>
+                    <input type="radio" name="radio2" checked="checked" value="4" />
+                    4
+                </label>
+                <label>
+                    <input type="radio" name="radio2" value="3" />
+                    3
+                </label>
+                <label>
+                    <input type="radio" name="radio2" value="2" />
+                    2
+                </label>
+                <label>
+                    <input type="radio" name="radio2" value="1" />
+                    1
+                </label>
+                <label>
+                    <input type="radio" name="radio2" value="0" />
+                    0
+                </label>
+                <br />
+                Сверхспособности?
+                <br />
+                <select name="name-super-3[]" multiple="multiple">
+                    <option value="Бессмертие" selected="selected">Бессмертие</option>
+                    <option value="прохождение сквозь стены">прохождение сквозь стены</option>
+                    <option value="левитация">левитация</option>
+                </select>
+                <br />
+                Биография?
+                <label>
+                    <br />
+                    <textarea name="field-name-2">Биография</textarea>
+                </label>
+                <br />
+                <label>
+                    <input type="checkbox" checked="checked" name="check1" /> С контактом ознакомлен(а)
+                </label>
+                <br />
+                Отправка формы
+                <input type="submit" value="Отправить" />
+            </form>
+        </div>
     </div>
     </div>
     <br />
-    <footer>
-            <h4>
-                (c) Прасол Артем 2022
-            </h4>
-        
+    <footer class="container-fluid">
+        <h4>
+            (c) Прасол Артем 2022
+        </h4>
+
     </footer>
 </body>
 </html>
