--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <h1>
                 <a style="font-size:30px">Меню</a>
             </h1>
-            <h2 id="menu">
+            <div id="menu">
                 <div class="row">
                     <a href="#p1" class="col-md">Гиперссылки</a>
                     <a href="#p2" class="col-md">Таблица</a>
                     <a href="#p3" class="col-md">Форма</a>
                 </div>
-            </h2>
+            </div>
         </nav>
         <br />
         <!--Гиперссылки-->
@@ -194,14 +194,13 @@
                 <label>
                     <input type="checkbox" checked="checked" name="check1" /> С контактом ознакомлен(а)
                 </label>
-                <br />
+                
                 Отправка формы
                 <input type="submit" value="Отправить" />
             </form>
         </div>
     </div>
     </div>
-    <br />
     <footer class="container-fluid">
         <h4>
             (c) Прасол Артем 2022
